fix overflow blog view

--- a/main/css/baby_orange/default.css
+++ b/main/css/baby_orange/default.css
@@ -1299,6 +1299,7 @@ span.radio {
 	margin-bottom: 10px;
 	padding: 10px;
 	background-color: white;
+	z-index: -1;
 }
 .blogpost_comment_title {
 	display: block;
@@ -1332,6 +1333,7 @@ span.radio {
 	margin-top: 10px;
 	padding: 10px;
 	background-color: #F4F4F4;
+	margin-left:50px;
 }
 /* tabbed menu */
 #tabbed_menu {
