--- a/main/css/cool_blue/default.css
+++ b/main/css/cool_blue/default.css
@@ -1743,6 +1743,7 @@ div.blogpost_comment {
 	margin-bottom: 10px;
 	padding: 10px;
 	background-color: white;
+	z-index: -1;
 }
 span.blogpost_comment_title {
 	display: block;
@@ -1777,6 +1778,7 @@ div.comments {
 	margin-top: 10px;
 	padding: 10px;
 	background-color: #F4F4F4;
+	margin-left:50px;
 }
 .attachment_comment {
 	color: #737780;
